[tool.poetry]
name = "networktoolkit"
version = "0.1.2"
description = "A collection of networking tools"
authors = ["Luke Spademan <info@lukespademan.com>"]
license="MIT"
readme="README.md"
repository="https://gitlab.com/mokytis/networktoolkit"

[tool.poetry.dependencies]
python = "^3.8"
scapy = "^2.4.3"
requests = "^2.23.0"
Click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"
sphinx = "^2.4.3"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.scripts]
vendorlookup = "networktoolkit.vendorlookup:cli"
portuselookup = "networktoolkit.portuselookup:cli"
networkscan = "networktoolkit.networkscan:cli"
arpspoof = "networktoolkit.arpspoof:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
